syntax = "proto3";

package staff;

option go_package = "genprotos/";

import "staffer-protos/void.proto";


service ResumeService {
  rpc Create(ResumeCreate) returns (Void);
  rpc Get(Byid) returns (ResumeGetRes);
  rpc Update(ResumeUpdate) returns (Void);
  rpc Delete(Byid) returns (Void);
  rpc GetAll(ResumeGetAll) returns (ResumeGetAllRes);
};

message ResumeCreate {
  string user_id = 1;
  string education = 2;
  string summary = 3;
};

message ResumeGetRes {
  string id = 1;
  string user_id = 2;
  string education = 3;
  string summary = 4;
}

message ResumeUpdate {
  string id = 1;
  string education = 2;
  string summary = 3;
};

message ResumeGetAll {
  string user_id = 2;
  string education = 3;
  Pagination filter = 5;
};

message ResumeGetAllRes {
  ResumeGetRes Resumes = 1;
  bool success = 2;
};